--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,54 @@
 @import "grid";
+@import "reset";
+@import "variables";
+// CARDS ARE IN AN ul
 ul {
     list-style: none;
 }
 
+// DEFINE CARD DIMENSIONS AND STYLES
 .card {
-    height: 16rem;
+    height: auto;
     width: 12rem;
     border: 3px solid black;
     border-radius: 12px;
-    background-color: rgb(84, 179, 84);
+}
+
+//HEADER AND FOOTER STYLES
+.header {
+    background-color: $color-logo;
+    &__logo img {
+        height: 4rem;
+    }
+}
+
+.footer {
+    background-color: $color-logo;
+    height: 4rem;
+}
+
+// INNER CARD STYLES
+.card {
+    position: relative;
+    &__laptop-image img {
+        width: 100%;
+    }
+    &__logo-image img {
+        position: absolute;
+        top: 0.3rem;
+        right: 0.3rem;
+        width: 3rem;
+        border-radius: 50%;
+    }
+    &__social-media-icons {
+        display: flex;
+    }
+    &__social-media-icons img {
+        width: 1.4rem;
+    }
+    &__social-media-icons,
+    p {
+        line-height: 1.2rem;
+        padding: 0.4rem 0.5rem;
+    }
 }
